# Contenedor-de-Instalacion-de-Aplicaciones-separadas-en-PC

./: .gitignore  Cargo.toml  README.md  TESTING.md  package-lock.json
agent/: Cargo.toml  README.md
agent/src/: launcher.rs  main.rs  mount.rs  registry.rs  runtime.rs  services.rs
agent/src/hooks/: mod.rs  windows.rs
backend/: Cargo.toml  README.md  build.rs
backend/migrations/: 0001_initial.sql
backend/src/: app.rs  config.rs  grpc.rs  lib.rs  main.rs  queue.rs  security.rs  store.rs
backend/src/workers/: mod.rs
backend/tests/: api.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
containers/demo/: config.yml
docs/: api.md  hooks.md  roadmap.md  spec.md  windows-native-stack.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/tests/e2e/: containers.spec.ts
infrastructure/: README.md
installer/: README.md
installer/scripts/: capture.ps1
proto/: containers.proto
scripts/windows/: setup-postgres-redis.ps1  start-backend.ps1  start-worker.ps1
