[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "fs", "process", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.19"
which = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
retour = { version = "0.3", optional = true, features = ["static-detour"] }
widestring = { version = "1.1", optional = true }
windows = { version = "0.57", optional = true, features = ["Win32_Foundation"] }
windows-sys = { version = "0.52", optional = true, features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security"] }

[features]
default = []
native-hooks = ["dep:retour", "dep:widestring", "dep:windows", "dep:windows-sys"]
