[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
uuid = { version = "1.7", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "macros", "migrate"] }
redis = { version = "0.25", features = ["tokio-comp"] }
tokio-stream = "0.1"
futures-util = "0.3"
futures-core = "0.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.12"
once_cell = "1.19"
hyper = "1.4"
http-body-util = "0.1"
